# tb3_work

./: README.md
CAD/: WafflePi_115deg_Camera_Mount.stl  grabber_final.stl  test.txt
install/: local_setup.sh  (+1 more)
src/turtlebot3_task/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/turtlebot3_task/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/turtlebot3_task/launch/: robot_phys.launch.py  turtlebot3_waffle_pi_launch.py  turtlebot3_world.py
src/turtlebot3_task/log/: latest_build
src/turtlebot3_task/maps/: arena_map.pgm  arena_map.yaml
src/turtlebot3_task/models/arena_wall_east/: model.config
src/turtlebot3_task/models/arena_wall_east/materials/scripts/: marker_23.material
src/turtlebot3_task/models/arena_wall_north/: model.config
src/turtlebot3_task/models/arena_wall_north/materials/scripts/: marker_7.material
src/turtlebot3_task/models/arena_wall_south/: model.config
src/turtlebot3_task/models/arena_wall_south/materials/scripts/: marker_42.material
src/turtlebot3_task/models/arena_wall_west/: model.config
src/turtlebot3_task/models/arena_wall_west/materials/scripts/: marker_0.material
src/turtlebot3_task/models/turtlebot3_waffle_pi/: model.sdf
src/turtlebot3_task/models/turtlebot3_waffle_pi/meshes/: README.txt
src/turtlebot3_task/models/v3_block/: model.sdf
src/turtlebot3_task/turtlebot3_task/: alhamdulillah.py  astaghfirullah.py  bismillah.py  block_wall_detection.py  find_first_block.py  inshallah.py  mashallah.py  navigation.py  wall_id_publisher.py
src/turtlebot3_task/worlds/: world.world
(+21 files in other folders)
